# sidekick-swe-bench

./: .gitignore  README.md  harness.py  pyproject.toml  report.py  requirements.txt  serve.py  sidekick_client.py  tests.py  utils.py
