[tool.pdm]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "lox",
    "SWE-bench @ git+https://github.com/princeton-nlp/SWE-bench",
    "pre-commit",
    "dataclasses-json>=0.6.7",
]
requires-python = ">=3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
