[tool.pdm]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "lox>=0.12.0",
    "SWE-bench @ git+https://github.com/princeton-nlp/SWE-bench",
    "pre-commit",
    "dataclasses-json>=0.6.7",
    "marshmallow>=3.21.3",
    "tree-sitter>=0.22.3",
    "tree-sitter-python @ git+https://github.com/tree-sitter/tree-sitter-python",
]
requires-python = ">=3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
